# fair-data-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
fair_toolkit/: __init__.py
fair_toolkit/assessors/: manual_assessor.py
fair_toolkit/models/: pistoia_matrix.py  rda_indicators.py  scoring.py
notebooks/: 01_introduction_to_fair.ipynb  02_rda_fair_maturity_model.ipynb  03_pistoia_fair_maturity_matrix.ipynb  04_manual_fair_assessment_walkthrough.ipynb  05_fair_score_calculator.ipynb
tests/: test_models.py
webapp/: podman-compose.yml
webapp/api/: Dockerfile  database.py  init_db.py  main.py  models.py  schemas.py
webapp/api/routers/: assessments.py  indicators.py
webapp/frontend/: index.html  nginx.conf  package.json  tailwind.config.js
webapp/frontend/src/: App.vue  main.js
webapp/frontend/src/api/: client.js
webapp/frontend/src/components/: IndicatorCard.vue  ScoreGauge.vue
webapp/frontend/src/views/: AssessView.vue  HomeView.vue  ResultView.vue
