[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair-data-toolkit"
version = "0.1.0"
description = "Python toolkit for assessing FAIR data maturity using the RDA FAIR Maturity Model and Pistoia Alliance FAIR Maturity Matrix"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ali Shahmohammadi", email = "114936466+alishahmohammadi22@users.noreply.github.com" }]
keywords = ["FAIR", "data", "maturity", "RDA", "Pistoia", "pharmaceutical", "metadata", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets>=8.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
    "tabulate>=0.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://alishahmohammadi22.github.io/fair-data-toolkit"
Repository = "https://github.com/alishahmohammadi22/fair-data-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["fair_toolkit"]
